--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta
       name="viewport"
-      content="width=devide-width, initial-scale=1,  shrink-to-fit=no"
+      content="width=devideWidth, initial-scale=1,  shrink-to-fit=no"
     />
     <title>HubDIMEA</title>
     <link
